// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon/ItemIcon render() should render  component 1`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render audio component 1`] = `
<FileAudio32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render bookmark component 1`] = `
<FileBookmark32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render boxnote component 1`] = `
<FileBoxNote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render code component 1`] = `
<FileCode32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 1`] = `
<FileAudio32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 2`] = `
<FileBookmark32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 3`] = `
<FileBoxNote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 4`] = `
<FileCode32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 5`] = `
<FileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 6`] = `
<FileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 7`] = `
<FileDwg32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 8`] = `
<FileExcel32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 9`] = `
<FolderShared32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 10`] = `
<FolderExternal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 11`] = `
<FolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 12`] = `
<FileDocs32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 13`] = `
<FileSheets32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 14`] = `
<FileSlides32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 15`] = `
<FileIllustrator32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 16`] = `
<FileImage32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 17`] = `
<FileIndesign32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 18`] = `
<FileKeynote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 19`] = `
<FileNumbers32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 20`] = `
<FilePages32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 21`] = `
<FilePdf32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 22`] = `
<FilePhotoshop32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 23`] = `
<FilePowerpoint32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 24`] = `
<FilePresentation32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 25`] = `
<FileSpreadsheet32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 26`] = `
<FileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 27`] = `
<FileThreeD32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 28`] = `
<FolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 29`] = `
<FileVector32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 30`] = `
<FileVideo32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 31`] = `
<FileWord32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 32`] = `
<FileXbd32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 33`] = `
<FileXdw32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 34`] = `
<FileZip32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 35`] = `
<FileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 1`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render document component 1`] = `
<FileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render dwg component 1`] = `
<FileDwg32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render excel-spreadsheet component 1`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render folder-collab component 1`] = `
<FolderShared32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render folder-external component 1`] = `
<FolderExternal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render folder-plain component 1`] = `
<FolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render folder-plain component 2`] = `
<FolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render google-docs component 1`] = `
<FileDocs32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render google-sheets component 1`] = `
<FileSheets32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render google-slides component 1`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render illustrator component 1`] = `
<FileIllustrator32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render image component 1`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render indesign component 1`] = `
<FileIndesign32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render keynote component 1`] = `
<FileKeynote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render numbers component 1`] = `
<FileNumbers32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render pages component 1`] = `
<FilePages32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render pdf component 1`] = `
<FilePdf32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render photoshop component 1`] = `
<FilePhotoshop32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render powerpoint-presentation component 1`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render presentation component 1`] = `
<FilePresentation32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render spreadsheet component 1`] = `
<FileSpreadsheet32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render text component 1`] = `
<FileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render threed component 1`] = `
<FileThreeD32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render vector component 1`] = `
<FileVector32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render video component 1`] = `
<FileVideo32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render word-document component 1`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render xbd component 1`] = `
<FileXbd32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render xdw component 1`] = `
<FileXdw32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render zip component 1`] = `
<FileZip32
  height={32}
  width={32}
/>
`;
